--- a/docs/2023-05-07-spring.md
+++ b/docs/2023-05-07-spring.md
@@ -3,6 +3,8 @@ layout: notes
 title: Spring5 AOP, MVC, IOC (pdai)
 description: 
 image: 
+hide:
+  - toc
 ---
 **Inversion of Control** Container 
 Dependency Injection<br>
