--- a/docs/2023-05-15-训练营-Day1.md
+++ b/docs/2023-05-15-训练营-Day1.md
@@ -1,3 +1,7 @@
+---
+hide:
+  - toc
+---
 [704. 二分查找](https://leetcode.cn/problems/binary-search/)
 
 题目：给你一个升序数组nums和一个目标值target，返回目标值target在数组nums中的下标，如果不存在则返回-1
