--- a/docs/2023-05-14-代码随想录-Day14.md
+++ b/docs/2023-05-14-代码随想录-Day14.md
@@ -1,6 +1,7 @@
 ---
 hide:
   - toc
+title: Day 14 二叉树
 ---
 [104. Maximum Depth of Binary Tree](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
 
