--- a/docs/2023-05-16-代码随想录-Day16.md
+++ b/docs/2023-05-16-代码随想录-Day16.md
@@ -1,6 +1,7 @@
 ---
 hide:
   - toc
+title: Day 16 二叉树
 ---
 [513. Find Bottom Left Tree Value](https://leetcode.cn/problems/find-bottom-left-tree-value/)
 
