--- a/docs/2023-04-29-英雄算法联盟-Day29.md
+++ b/docs/2023-04-29-英雄算法联盟-Day29.md
@@ -1,64 +1,86 @@
 ---
 hide:
   - toc
+title: Day 29 分而治之, 状态压缩模版
 ---
-## 31. 状态压缩
+## 29: 分而治之
+[剑指 Offer II 101. 分割等和子集](https://leetcode.cn/problems/NUPfPr/)
 
-[526. Beautiful Arrangement](https://leetcode.cn/problems/beautiful-arrangement/)
 ```cpp
-class Solution {
-public:
-    int countArrangement(int n) {
-        vector<int> f(1 << n);
-        f[0] = 1;
-        // 遍历所有可能情况
-        for (int mask = 1; mask < (1 << n); mask++) {
-            //被选中的个数
-            int num = __builtin_popcount(mask);
-            for (int i = 0; i < n; i++) {
-                //第i + 1位数被选中 && 可以被放到最高位上
-                if (mask & (1 << i) && (num % (i + 1) == 0 || (i + 1) % num == 0)) {
-                    // 加上剩余n-1个数的可能排序方式的个数
-                    f[mask] += f[mask ^ (1 << i)];
+dp[nums.size() - 1][target]
+      for (int i = 1; i < nums.size(); i++) {
+            for (int j = 1; j <= sum; j++) {
+                if (j - nums[i] >= 0) {
+                    dp[i][j] = dp[i - 1][j] || dp[i - 1][j - nums[i]]; 
+                } else {
+                    dp[i][j] = dp[i - 1][j];
                 }
             }
         }
-        return f[(1 << n) - 1];
-    }
-};
 ```
-
-[1255. Maximum Score Words Formed by Letters](https://leetcode.cn/problems/maximum-score-words-formed-by-letters/)
-
-思路： 统计提供的字母次数
-遍历所有可能情况，for (int s = 1; s < (1 << n); s++) {
-
-统计子集中所有字母出现的次数
-如果次数都没有超过提供的次数，将当前和与最大和比较，更新最大和
-
-30: 拓扑排序
-[1976. Number of Ways to Arrive at Destination](https://leetcode.cn/problems/number-of-ways-to-arrive-at-destination/)
-
-思路： 
-性质：在任意的合法方案中，途径的该路径中的每个点时，都是以最短路径的方式到达的
-在跑「拓扑排序」过程中进行 DP，统计方案数
+## 31: 状态压缩模版
 ```cpp
-//dijkstra
-while (!pq.empty()) {
-    auto [_, u] = pq.top();
-    pq.pop();
-    if (vis[u]) {
-        continue;
-    }
-    vis[u] = 1;
-    for (auto [v, w]: G[u]) {
-        if (dist[v] > dist[u] + w) {
-            dist[v] = dist[u] + w;
-            f[v] = f[u];
-            pq.push({dist[v], v});
-        } else if (dist[v] == dist[u] + w) {
-            f[v] = (f[u] + f[v]) % (long)(1e9 + 7);
+const int maxn = 12;
+const int inf  = 100000000;
+
+class Solution {
+    int n;
+    int mat[maxn][maxn];                                   // (1)
+    int f[maxn][maxn][1<<maxn];                            // (2)
+public:
+    void fillGraphMatrix(vector<vector<int>>& graph) {     // (3)
+        memset(mat, 0, sizeof(mat));
+        for(int i = 0; i < n; ++i) {
+            for(int j = 0; j < graph[i].size(); ++j) {
+                mat[i][ graph[i][j] ] = 1;
+            }
         }
     }
-}
+
+    int dfs(int st, int en, int state) {                   // (4)
+        if(  !( (1<<st) & state ) ) {                      // (5)
+            return inf;
+        }
+        if(  !( (1<<en) & state ) ) {                      // (6)
+            return inf;
+        }
+        if(st == en) {
+            if(state == (1<<st)) {
+                return 0;                                  // (7)
+            }
+        }
+
+        int &ret = f[st][en][state];
+        if(ret != -1) {
+            return ret;                                    // (8)
+        }
+        ret = inf;
+        for(int i = 0; i < n; ++i) {                       // (9)
+            // (st -> ... -> i)  U  (i -> en) 
+            if(!mat[i][en]) {                              // (10)
+                continue;
+            }
+            int a = dfs(st, i, state);                     // (11)
+            int b = dfs(st, i, state ^ (1<<en));           // (12)
+            ret = min( ret, min(a, b) + 1 );               // (13)
+        }
+        return ret;
+    }
+
+    int shortestPathLength(vector<vector<int>>& graph) {
+        n = graph.size();
+        fillGraphMatrix(graph);
+        int ret = 100000000;
+        memset(f, -1, sizeof(f));
+
+        for(int i = 0; i < n; ++i) {
+            for(int j = 0; j < n; ++j) {
+                int &ans = f[i][j][(1<<n) - 1];
+                ans = dfs(i, j, (1<<n) - 1);              // (14)
+                ret = min(ans, ret);
+            }
+        }
+        return ret;
+    }
+};
 ```
