--- a/docs/2023-05-14-代码随想录-Day14.md
+++ b/docs/2023-05-14-代码随想录-Day14.md
@@ -5,9 +5,9 @@ title: Day 14 二叉树
 ---
 [104. Maximum Depth of Binary Tree](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
 
-前序求的是深度，后序求的是高度。
-二叉树节点的深度：指从根节点到该节点的最长简单路径边的条数或者节点数（取决于深度从0开始还是从1开始）
-二叉树节点的高度：指从该节点到叶子节点的最长简单路径边的条数后者节点数（取决于高度从0开始还是从1开始）
+前序求的是深度，后序求的是高度。<br>
+二叉树节点的深度：指从根节点到该节点的最长简单路径边的条数或者节点数（取决于深度从0开始还是从1开始）<br>
+二叉树节点的高度：指从该节点到叶子节点的最长简单路径边的条数后者节点数（取决于高度从0开始还是从1开始）<br>
 
 ```cpp
 class solution {
